Fix stretched logo image on IE

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -408,7 +408,7 @@ body {
   background-size: contain;
   content: '';
   display: block;
-  /*height: 46px;*/
+  height: 100%;
   margin-right: .5em;
   width: 62px;
 }
